fix(credit-app): breadcrumb overflow issues
wrap the flex when necessary, move wrap to ol

--- a/app/globals.css
+++ b/app/globals.css
@@ -88,6 +88,10 @@ canvas {
   @apply list-disc;
 }
 
+#breadcrumb-nav > ol {
+  @apply flex-wrap ;
+}
+
 .required:after {
     content:" *";
     color: red;
